fix desktop issue with overflow-y in object filters

--- a/src/styles/components/_objects.scss
+++ b/src/styles/components/_objects.scss
@@ -112,11 +112,13 @@
             scroll-snap-type: x mandatory;
             scroll-padding-left: var(--site-margin-large);
             min-height: max-content;
+            
             will-change: transform;
             @include scrollbar-hidden;
 
             @include media(medium) {
                 overflow-x: visible;
+                overflow-y: visible;
                 padding: 0 calc(var(--toolbar-width) + var(--site-margin-small));
                 scroll-padding-left: calc(var(--toolbar-width) + var(--site-margin-small));
             }
